# ug

./: .gitignore  Cargo.toml
ug-core/: Cargo.toml
ug-core/src/: block.rs  cache.rs  cpu_code_gen.rs  cpu_runtime.rs  display.rs  dtype.rs  error.rs  interpreter.rs  lang.rs  layout.rs  lazy_buffer.rs  lib.rs  lower.rs  lower_op.rs  safetensors.rs  samples.rs  schedule.rs  utils.rs
ug-core/tests/: basic_tests.rs  cpu_tests.rs
ug-cuda/: Cargo.toml
ug-cuda/examples/: benchmark.rs  cuda_gen.rs
ug-cuda/src/: code_gen.rs  gemm.rs  lib.rs  runtime.rs
ug-llama/: Cargo.toml
ug-llama/src/: main.rs  metal_ops.rs
ug-metal/: Cargo.toml
ug-metal/examples/: metal_bench.rs
ug-metal/src/: code_gen.rs  lib.rs  runtime.rs
ug-pyo3/: Cargo.toml
ug-pyo3/src/: lib.rs
