[workspace]
members = [
  "ug-core",
  "ug-cuda",
  "ug-llama",
  "ug-metal",
  "ug-pyo3",
]
exclude = [
]

resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2024"
description = "Micro compiler for tensor operations."
repository = "https://github.com/LaurentMazare/ug"
keywords = ["tensor", "machine-learning", "cuda"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"

[workspace.dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.5.20", features = ["derive"] }
cudarc = { git = "https://github.com/Kubedoll-Heavy-Industries/cudarc.git", branch = "cagyirey/dev", features = ["std", "cublas", "cublaslt", "curand", "driver", "nvrtc", "f16", "cuda-version-from-build-system", "dynamic-linking"], default-features=false }
gemm = { version = "0.19", features = ["wasm-simd128-enable"] }
half = { version = "2.6", features = ["num-traits", "use-intrinsics", "rand_distr"] }
hf-hub = "0.4.3"
libloading = "0.9.0"
memmap2 = { version = "0.9.5", features = ["stable_deref_trait"] }
metal = "0.33"
num = "0.4.3"
num-traits = "0.2.19"
objc2 = "0.6"
ug = { path = "./ug-core", version = "0.5.0" }
ug-cuda = { path = "./ug-cuda", version = "0.5.0" }
ug-metal = { path = "./ug-metal", version = "0.5.0" }
rand = "0.9"
rand_distr = "0.5"
rayon = "1.11"
rustc-hash = "2"
safetensors = "0.7"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2"
tokenizers = "0.22.2"
tracing = "0.1.40"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.18"
yoke = { version = "0.8.1", features = ["derive"] }

[profile.release]
debug = true
lto = "thin"
codegen-units = 1

[profile.release-no-debug]
inherits = "release"
debug = false
